[gd_scene load_steps=11 format=3 uid="uid://cx5ry3xer1jl3"]

[ext_resource type="Theme" uid="uid://dkrs350vaq2kh" path="res://addons/RPGMap/Assets/Themes/dialog_theme.tres" id="1_cix3b"]
[ext_resource type="PackedScene" uid="uid://bj48rsidmna6s" path="res://addons/CustomControls/custom_spin_box.tscn" id="2_5neam"]
[ext_resource type="Script" uid="uid://otbr7q00dx02" path="res://addons/CustomControls/Dialogs/animation_select_sound_dialog.gd" id="2_shq88"]
[ext_resource type="PackedScene" uid="uid://c6vqhgg1w1sxj" path="res://addons/CustomControls/custom_button_2.tscn" id="3_gekb2"]
[ext_resource type="PackedScene" uid="uid://bnx7omk3joxly" path="res://addons/CustomControls/custom_button.tscn" id="4_vi2ow"]
[ext_resource type="Texture2D" uid="uid://btjtps7r83y2t" path="res://addons/CustomControls/Images/buttons.png" id="5_wosju"]

[sub_resource type="Gradient" id="Gradient_wj5oj"]
colors = PackedColorArray(0.184314, 0.2, 0.207843, 1, 0.278431, 0.294118, 0.301961, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_jhfde"]
gradient = SubResource("Gradient_wj5oj")
fill_from = Vector2(0.5, 1)
fill_to = Vector2(0.5, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_vr6oq"]
atlas = ExtResource("5_wosju")
region = Rect2(48, 72, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_etj80"]
atlas = ExtResource("5_wosju")
region = Rect2(48, 96, 24, 24)

[node name="AnimationSelectSoundDialog" type="Window"]
title = "Animation Sound"
size = Vector2i(480, 206)
transient = true
exclusive = true
unresizable = true
theme = ExtResource("1_cix3b")
script = ExtResource("2_shq88")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_jhfde")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(105, 0)
layout_mode = 2
text = "Frame:"

[node name="Frame" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("2_5neam")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Select the frame where this sound will be reproduced"
allow_greater = true

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(105, 0)
layout_mode = 2
text = "Filename:"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Filename" parent="MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer" instance=ExtResource("3_gekb2")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
tooltip_text = "Click to select sound
"
theme_override_colors/font_disabled_color = Color(1, 1, 1, 0)
text = "Select Sound File"
text_overrun_behavior = 3

[node name="PlayButton" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
tooltip_text = "[title]Play Audio[/title]
Plays the audio specified in filename."
focus_mode = 0
mouse_default_cursor_shape = 2
texture_normal = SubResource("AtlasTexture_vr6oq")
texture_hover = SubResource("AtlasTexture_etj80")

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(105, 0)
layout_mode = 2
text = "Pitch:"

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "Min:"

[node name="MinPitch" parent="MarginContainer/VBoxContainer/HBoxContainer4" instance=ExtResource("2_5neam")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Selects the pitch for the sound. This will be selected between the \"Pitch Min\" and \"Pitch Max\" values."
min_value = 0.01
max_value = 4.0
step = 0.01
value = 1.0

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "Max:"

[node name="MaxPitch" parent="MarginContainer/VBoxContainer/HBoxContainer4" instance=ExtResource("2_5neam")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Selects the pitch for the sound. This will be selected between the \"Pitch Min\" and \"Pitch Max\" values."
min_value = 0.01
max_value = 4.0
step = 0.01
value = 1.0

[node name="HBoxContainer5" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer5"]
custom_minimum_size = Vector2(105, 0)
layout_mode = 2
text = "Volume:"

[node name="Volume" parent="MarginContainer/VBoxContainer/HBoxContainer5" instance=ExtResource("2_5neam")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Select the volume for this audio"
min_value = -80.0
max_value = 24.0
step = 0.01

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="OKButton" parent="MarginContainer/VBoxContainer/HBoxContainer3" instance=ExtResource("4_vi2ow")]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "[title]Ok[/title]
Saves all changes and closes the windows."
text = "OK"

[node name="CancelButton" parent="MarginContainer/VBoxContainer/HBoxContainer3" instance=ExtResource("4_vi2ow")]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "[title]Cancel[/title]
Closes this window without saving any changes."
text = "Cancel"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer/Frame" to="." method="_on_frame_value_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer/Filename" to="." method="_on_filename_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer4/MinPitch" to="." method="_on_min_pitch_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer4/MaxPitch" to="." method="_on_max_pitch_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer5/Volume" to="." method="_on_volume_value_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer3/OKButton" to="." method="_on_ok_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer3/CancelButton" to="." method="_on_cancel_button_pressed"]
